--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   fl_chart: ^0.55.1
   dotted_border: ^2.0.0+2
   stomp_dart_client: ^0.4.4
+  flutter_spinbox: ^0.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
