--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   record_mp3: ^3.0.0
   permission_handler: ^9.2.0
   speech_to_text: ^5.6.1
+  palette_generator: ^0.3.3+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
