--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   clipboard_listener: ^2.0.0
   clipboard_monitor: ^0.9.2
   gallery_saver: ^2.3.2
+  file_saver: ^0.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
